Update link to False language documentation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <a href="turing/turing.html"><b>Turing machine simulator</b></a> - a web-based <a href="http://en.wikipedia.org/wiki/Turing_machine">Turing machine</a> simulator, written in Javascript, with some example Turing machine programs.
     </li>
     <li>
-     <a href="false/false.html"><b>False language interpreter</b></a> - a web-based interpreter for the <a href="http://strlen.com/false/false.txt">False</a> language, written in Javascript, with some example False programs.
+     <a href="false/false.html"><b>False language interpreter</b></a> - a web-based interpreter for the <a href="https://strlen.com/files/lang/false/false.txt">False</a> language, written in Javascript, with some example False programs.
     </li>
    </ul>
   </div>
